# BasicLandGame

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  CardEffects.cpp  CardEffects.h  GameRuleDefs.h  LandGame.cpp  LandGame.h  Player.cpp  Player.h  README.md  main.cpp
include/: Card.h  CardEffects.h  GameRuleDefs.h  LandGame.h  Player.h
include/cardTypes/: Forest.h  Island.h  Mountain.h  Plains.h  Swamp.h
src/: Card.cpp  CardEffects.cpp  LandGame.cpp  Player.cpp
src/cardTypes/: Forest.cpp  Island.cpp  Mountain.cpp  Plains.cpp  Swamp.cpp
